# scheduler

./: README.md
.github/workflows/: aixinwu-scheduler.yml  bilibili-check-in.yml  juejin-bug-collect.yml  juejin-check-in.yml  juejin-lottery.yml  leetcode.yml  scheduler.yml  scu-micro-services.yml  taobao.yml  weather-report.yml
anxinwu-sign/: main.go
bilibili-check-in/: main.go
juejin-bug-collect/: Cargo.toml
juejin-bug-collect/src/: main.rs  request.rs  response.rs
juejin-check-in/: main.go
juejin-lottery/: main.go
leetcode/: Cargo.toml
leetcode/src/: mail.rs  main.rs  request.rs  response.rs
scu-micro-services/: main.go
taobao/: list_bought_items.go
weather-report/: main.go
